Bug 1409969 - The root domain icon should not be preferred if 2 icons for the same size exist. r=standard8

MozReview-Commit-ID: CnNNp4F6uyh